[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-dashboard"
version = "0.1.0"
description = "Tableau de bord glissant pour tes repos git dans le terminal."
requires-python = ">=3.9"
authors = [{ name = "SamyNikaia" }]
keywords = ["git", "dashboard", "cli", "tui"]

[project.scripts]
pulse = "pulse:main"

[tool.setuptools]
py-modules = ["pulse"]
